--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -122,7 +122,7 @@
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
                     <i class="material-icons left">settings</i>
                     <span class="left" style="margin-right: 10px;">Tools/Data</span>
-                    <span class="new badge" data-badge-caption="found" ng-bind="tools_search_tools_number"
+                    <span class="new badge" data-badge-caption="found" ng-bind="tools_search_tools_number" ng-show="tools_search_tools_number >= 0"
                         style="margin-left: 5px;"></span>
                     <a id="toolsDataPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
                         data-position="left" data-tooltip="create Tool" ng-click="tools_search_create_new_pressed_ok()"><i class="material-icons plusIcon">add</i></a>
@@ -181,7 +181,7 @@
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
                     <i class="material-icons left">device_hub</i>
                     <span class="left" style="margin-right: 10px;">Workflows</span>
-                    <span class="new badge" data-badge-caption="found" ng-bind="workflows_search_tools_number"
+                    <span class="new badge" data-badge-caption="found" ng-bind="workflows_search_tools_number" ng-show="workflows_search_tools_number >= 0"
                         style="margin-left: 5px;"></span>
                     <a id="workflowsPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
                         data-position="left" data-tooltip="create Workflow"><i
@@ -243,7 +243,7 @@
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
                     <i class="material-icons left">whatshot</i>
                     <span class="left" style="margin-right: 10px;">Reports</span>
-                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_reports_number"></span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_reports_number" ng-show="main_search_reports_number >= 0"></span>
                 </div>
                 <div class="collapsible-body">
                     <!--
@@ -274,7 +274,7 @@
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
                     <i class="material-icons left">whatshot</i>
                     <span class="left" style="margin-right: 10px;">References</span>
-                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_references_number"></span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_references_number" ng-show="main_search_references_number >= 0"></span>
                     <a id="referencesPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
                         data-position="left" data-tooltip="create Reference"><i
                             class="material-icons plusIcon" ng-click="references_plus_button_clicked()">add</i></a>
@@ -308,7 +308,7 @@
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
                     <i class="material-icons left">whatshot</i>
                     <span class="left" style="margin-right: 10px;">Users</span>
-                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_users_number"></span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_users_number" ng-show="main_search_users_number >= 0"></span>
                 </div>
                 <div class="collapsible-body">
                     <!-- 
@@ -339,7 +339,7 @@
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
                     <i class="material-icons left">whatshot</i>
                     <span class="left" style="margin-right: 10px;">Q & A</span>
-                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_qa_number"></span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_qa_number" ng-show="main_search_qa_number >= 0"></span>
                     <a id="qaPlusBtn" class="waves-effect btn green plusBtn right tooltipped" data-position="left"
                         data-tooltip="create Question" ng-click="qa_plus_button_clicked()"><i class="material-icons plusIcon">add</i></a>
                 </div>
