--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -24,10 +24,6 @@
                 </p>
                 <!-- Buttons -->
                 <div class="row right-align">
-                    <a id="expandAllBtn1" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
-                        data-position="bottom" data-tooltip="Expand All"><i class="material-icons">unfold_more</i></a>
-                    <a id="collapseAllBtn1" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
-                        data-position="bottom" data-tooltip="Collapse All"><i class="material-icons">unfold_less</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Save" ng-click="tool_create_save_pressed()" ng-show="tools_info_editable"><i
                             class="material-icons">save</i></a>
@@ -388,10 +384,6 @@
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Clear" ng-click="workflow_info_clear_pressed()"
                         ng-disabled="!workflows_info_editable">Clear</a>
-                    <a id="expandAllBtn2" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
-                        data-position="bottom" data-tooltip="Expand All"><i class="material-icons">unfold_more</i></a>
-                    <a id="collapseAllBtn2" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
-                        data-position="bottom" data-tooltip="Collapse All"><i class="material-icons">unfold_less</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Save" ng-click="workflows_create_save_pressed()"
                         ng-show="workflows_info_editable"><i class="material-icons">save</i></a>
@@ -817,17 +809,13 @@
                         <span>USED IN 86 WFs</span>
                     </small>
                     <div class="card blue-grey darken-1">
-                        <div class="card-content white-text">
+                        <div class="card-content" style="background-color: #f0f8ff;">
                             <p><span ng-bind-html="references_formatted"></span></p>
                         </div>
                     </div>
                 </div>
                 <!-- Buttons -->
                 <div class="row right-align">
-                    <a id="expandAllBtn3" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
-                        data-position="bottom" data-tooltip="Expand All"><i class="material-icons">unfold_more</i></a>
-                    <a id="collapseAllBtn3" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
-                        data-position="bottom" data-tooltip="Collapse All"><i class="material-icons">unfold_less</i></a>
                     <!-- <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                             data-tooltip="Save" ng-click="tool_create_save_pressed()" ng-show="tools_info_editable"><i
                                 class="material-icons">save</i></a> -->
@@ -1005,10 +993,12 @@
                                 <div class="col s3"><b>Second Name:</b></div>
                                 <div class="col s9"><span ng-bind="user_lastname"></span></div>
                             </div>
+                            {{verbatim}}
                             <div class="row left-align">
                                 <div class="col s3"><b>Website:</b></div>
-                                <div class="col s9"><span ng-bind="user_website"></span></div>
+                                <div class="col s9"><a href="https://{{user_website}}" target="_blank"><span ng-bind="user_website"></span></a></div>
                             </div>
+                            {{endverbatim}}
                             <div class="row left-align">
                                 <div class="col s3"><b>Affiliation:</b></div>
                                 <div class="col s9"><span ng-bind="user_affiliation"></span></div>
