--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -70,16 +70,41 @@ nav {
     left: 5px;
 }
 
+/* Sign up / Sign in Modal */
+
+#signModal {
+    max-width: 600px !important;
+}
+
+.dropdownStyle {
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+}
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+/* ----------------------------------------------------------------------------- Images ----------------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
 .imgAvatar {
     height: 34px;
     width: 34px;
     margin: 5px;
 }
 
-/* Sign up / Sign in Modal */
+.avatarForumReply {
+    height: 25px;
+    width: 25px;
+    margin: 0px;
+    margin-right: 5px;
+}
 
-#signModal {
-    max-width: 600px !important;
+.avatarForumQuestion {
+    height: 34px;
+    width: 34px;
+    margin: 0px;
+    margin-right: 5px;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
@@ -199,7 +224,11 @@ nav {
 
 .jsTreeMaterialIcons {
     margin-right: 2px !important;
-    padding-top: 4px;
+    padding-top: 3px;
+}
+
+.dropdownIcon{
+    margin-right: 10px !important;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
