--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -60,6 +60,10 @@
                                             <label for="profileEmail">Email</label>
                                         </div>
                                         <div class="input-field col s12">
+                                            <input id="profileMember" type="text" class="validate" disabled value="10/10/10">
+                                            <label for="profileMember">Member Since</label>
+                                        </div>
+                                        <div class="input-field col s12">
                                             <input id="profileWebsite" type="text" class="validate" ng-model="profile_website">
                                             <label for="profileWebsite">Website</label>
                                         </div>
