--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -15,16 +15,10 @@
 <!-- --------------------------------------------------------- Left Panel ---------------------------------------------------------------------------- -->
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
 <div class="leftPanel">
-    <!-- scroll to top -->
-    <!-- <a id="back2Top" title="Back to top" href="#"><i class="material-icons">add</i></a> -->
-
     <div id="leftPanelProgress" class="progress" style="margin-top:1px; display: none;">
         <div class="indeterminate"></div>
     </div>
     <a id="preloaderBtn" class="waves-effect waves-light btn">Toggle Preloader</a>
-    <!-- <div id="createNewBtn" class="fixed-action-btn" style="display:block">
-        <a class="btn-floating btn-large waves-effect waves-light red left-align"><i class="material-icons">add</i></a>
-    </div> -->
     <div style="margin: 20px;">
         <!-- --------------------------------------------------------------------------------------- -->
         <!-- ------------------------------- Search Input ------------------------------------------ -->
@@ -39,22 +33,40 @@
                         <label for="leftPanelSearch">Search</label>
                     </div>
                     <div class="left-align" style="margin-left:15px">
-                        <p class="col s12 m3 grid-s12-m3-l3" style="margin-bottom:0px">
+                        <p class="col s6 m4 l2 grid-s6-m4-l2" style="margin-bottom:0px">
                             <label>
                                 <input type="checkbox" />
                                 <span>Tool</span>
                             </label>
                         </p>
-                        <p class="col s12 m3 grid-s12-m3-l3" style="margin-bottom:0px">
+                        <p class="col s6 m4 l2 grid-s6-m4-l2" style="margin-bottom:0px">
                             <label>
                                 <input type="checkbox" />
                                 <span>Workflow</span>
                             </label>
                         </p>
-                        <p class="col s12 m3 grid-s12-m3-l3" style="margin-bottom:0px">
+                        <p class="col s6 m4 l2 grid-s6-m4-l2" style="margin-bottom:0px">
+                            <label>
+                                <input type="checkbox" />
+                                <span>Report</span>
+                            </label>
+                        </p>
+                        <p class="col s6 m4 l2 grid-s6-m4-l2" style="margin-bottom:0px">
                             <label>
                                 <input type="checkbox" />
                                 <span>Reference</span>
+                            </label>
+                        </p>
+                        <p class="col s6 m4 l2 grid-s6-m4-l2" style="margin-bottom:0px">
+                            <label>
+                                <input type="checkbox" />
+                                <span>User</span>
+                            </label>
+                        </p>
+                        <p class="col s6 m4 l2 grid-s6-m4-l2" style="margin-bottom:0px">
+                            <label>
+                                <input type="checkbox" />
+                                <span>Q&A</span>
                             </label>
                         </p>
                     </div>
@@ -104,7 +116,6 @@
                                 <div class="input-field col s12 m12 grid-s12-m12-l12">
                                     <div id="searchChips" class="input-field chips left-align" style="margin:0px">
                                     </div>
-
                                 </div>
                             </div>
                         </form>
@@ -126,7 +137,7 @@
                     <span class="new badge" data-badge-caption="found" ng-bind="tools_search_tools_number"
                         ng-show="tools_search_tools_number >= 0" style="margin-left: 5px;"></span>
                     <a id="toolsDataPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="create Tool"
+                        data-position="left" data-tooltip="Create Tool"
                         ng-click="tools_search_create_new_pressed_ok()"><i class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
@@ -186,7 +197,7 @@
                     <span class="new badge" data-badge-caption="found" ng-bind="workflows_search_tools_number"
                         ng-show="workflows_search_tools_number >= 0" style="margin-left: 5px;"></span>
                     <a id="workflowsPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="create Workflow"><i class="material-icons plusIcon"
+                        data-position="left" data-tooltip="Create Workflow"><i class="material-icons plusIcon"
                             ng-click="workflows_search_create_new_pressed()">add</i></a>
                 </div>
                 <div class="collapsible-body">
@@ -281,7 +292,7 @@
                     <span class="new badge" data-badge-caption="found" style="margin-left: 5px;"
                         ng-bind="main_search_references_number" ng-show="main_search_references_number >= 0"></span>
                     <a id="referencesPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="create Reference"><i class="material-icons plusIcon"
+                        data-position="left" data-tooltip="Create Reference"><i class="material-icons plusIcon"
                             ng-click="references_plus_button_clicked()">add</i></a>
                 </div>
                 <div class="collapsible-body">
@@ -349,7 +360,7 @@
                     <span class="new badge" data-badge-caption="found" style="margin-left: 5px;"
                         ng-bind="main_search_qa_number" ng-show="main_search_qa_number >= 0"></span>
                     <a id="qaPlusBtn" class="waves-effect btn green plusBtn right tooltipped" data-position="left"
-                        data-tooltip="create Question" ng-click="qa_plus_button_clicked()"><i
+                        data-tooltip="Create Question" ng-click="qa_plus_button_clicked()"><i
                             class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
