--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -19,12 +19,12 @@
             </ul>
             <!-- Profile dropdown content -->
             <ul id="profile" class="dropdown-content">
-                <li><a href ng-click="navbar_profile_clicked()"><i class="material-icons">person</i>Profile</a></li>
-                <li><a href="#!"><i class="material-icons">mail_outline</i>Inbox</a></li>
-                <li><a href="#!"><i class="material-icons">notifications</i>Notifications</a></li>
-                <li><a href="#!"><i class="material-icons">settings</i>Settings</a></li>
+                <li><a href ng-click="navbar_profile_clicked()" class="dropdownStyle"><i class="material-icons dropdownIcon">person</i>Profile</a></li>
+                <li><a href="#!" class="dropdownStyle"><i class="material-icons dropdownIcon">mail_outline</i>Inbox</a></li>
+                <li><a href="#!" class="dropdownStyle"><i class="material-icons dropdownIcon">notifications</i>Notifications</a></li>
+                <li><a href="#!" class="dropdownStyle"><i class="material-icons dropdownIcon">settings</i>Settings</a></li>
                 <li class="divider"></li>
-                <li><a href="logout/"><i class="material-icons">exit_to_app</i>Logout</a></li>
+                <li><a href="logout/" class="dropdownStyle"><i class="material-icons dropdownIcon">exit_to_app</i>Logout</a></li>
             </ul>
             <!-- Sidenav Content -->
             <ul class="sidenav" id="mobile-nav">
