--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -719,7 +719,7 @@
                                 <ul>
                                     <li ng-repeat="token in report_tokens track by token.token">
                                         <span ng-bind="token.status"></span>, <span ng-bind="token.created_at"></span><a
-                                            ng-click="nodeAnimation(token.node_anim_id, token.state)">show</a>
+                                            ng-click="nodeAnimation_public(token.node_anim_params)">show</a>
                                     </li>
                                 </ul>
                             </div>
