right panel title added

--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -227,7 +227,7 @@ nav {
     padding-top: 3px;
 }
 
-.dropdownIcon{
+.dropdownIcon {
     margin-right: 10px !important;
 }
 
@@ -389,4 +389,22 @@ nav {
 
 .switch label .lever:after {
     background-color: #26a69a;
+}
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------ Right Panel Title Header ------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+.rightPanelTitleCard {
+    margin: 0px !important;
+}
+
+.rightPanelTitleContent {
+    padding: 10px !important;
+}
+
+.rightPanelTitleHeader {
+    margin: 0px !important;
 }
