--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -2,7 +2,10 @@
 <div id="warningModal" class="modal">
     <div class="modal-content">
         <h4>Warning</h4>
-        <p>All changes will be lost. Are you sure you want to continue?</p>
+        <p>
+        <span ng-bind="modal_message"></span>
+        Are you sure you want to continue?
+        </p>
     </div>
     <div class="modal-footer">
         <a href class="waves-effect waves-red btn-flat" ng-click="tools_search_jstree_modal_editable(false)">No</a>
@@ -138,7 +141,9 @@
                         ng-show="tools_search_tools_number >= 0" style="margin-left: 5px;"></span>
                     <a id="toolsDataPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
                         data-position="left" data-tooltip="Create Tool"
-                        ng-click="tools_search_create_new_pressed_ok()"><i class="material-icons plusIcon">add</i></a>
+                        ng-show="!tools_info_editable"
+                        ng-click="tools_plus_button_clicked(true)"><i class="material-icons plusIcon">add</i></a>
+                    <a class="btn pink plusBtn right" ng-show="tools_info_editable" ng-click="tools_plus_button_clicked(false)">UNSAVED</a>
                 </div>
                 <div class="collapsible-body">
                     <!--
@@ -198,7 +203,7 @@
                         ng-show="workflows_search_tools_number >= 0" style="margin-left: 5px;"></span>
                     <a id="workflowsPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
                         data-position="left" data-tooltip="Create Workflow"><i class="material-icons plusIcon"
-                            ng-click="workflows_search_create_new_pressed()">add</i></a>
+                            ng-click="workflows_plus_button_clicked()">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
