added unsaved btn

--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -347,6 +347,14 @@ nav {
     bottom: 61px;
 } */
 
+.unsavedBtn {
+    padding: 3px;
+    line-height: 1;
+    height: 20px;
+    margin-top: 2px;
+}
+
+
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------ Pushpin with Scrollspy ------------------------------------------------------------------------------ */
