--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -372,6 +372,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Workflow</h5>
+                <a class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="workflows_button_cancel_clicked()">Cancel</a>
             </div>
         </div>
         <div style="margin: 20px;">
@@ -823,6 +824,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Report</h5>
+                <a class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="references_button_cancel_clicked()">Cancel</a>
             </div>
         </div>
         <div style="margin: 20px;">
@@ -1077,6 +1079,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Q & A</h5>
+                <a class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="qas_button_cancel_clicked()">Cancel</a>
             </div>
         </div>
         <div style="margin: 20px;">
