--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -925,11 +925,14 @@
                                     <div class="col s12 m9 grid-s12-m9-l9"><span ng-bind="references_title"></span>
                                     </div>
                                 </div>
+                                {{verbatim}}
                                 <div class="row left-align">
                                     <div class="col s12 m3 grid-s12-m3-l3"><b>URL:</b></div>
-                                    <div class="col s12 m9 grid-s12-m9-l9"><span ng-bind="references_url"></span>
+                                    <div class="col s12 m9 grid-s12-m9-l9"><a ng-href="{{references_url}}"
+                                        target="_blank"><span ng-bind="references_url"></span></a>
                                     </div>
                                 </div>
+                                {{endverbatim}}
                                 <div class="row left-align">
                                     <div class="col s12 m3 grid-s12-m3-l3"><b>DOI:</b></div>
                                     <div class="col s12 m9 grid-s12-m9-l9"><span ng-bind="references_doi"></span>
@@ -1043,7 +1046,7 @@
                             {{verbatim}}
                             <div class="row left-align">
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Website:</b></div>
-                                <div class="col s12 m9 grid-s12-m9-l9"><a href="https://{{user_website}}"
+                                <div class="col s12 m9 grid-s12-m9-l9"><a href="{{user_website}}"
                                         target="_blank"><span ng-bind="user_website"></span></a></div>
                             </div>
                             {{endverbatim}}
