--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -83,10 +83,12 @@
                             </div>
                         </form>
                         <div ng-show="!tools_info_editable">
+                            {% verbatim %}
                             <div class="row left-align">
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Website:</b></div>
-                                <div class="col s12 m9 grid-s12-m9-l9"><span ng-bind="tool_website"></span></div>
+                                <div class="col s12 m9 grid-s12-m9-l9"><a ng-href="{{ tool_website }}" target="_blank"><span ng-bind="tool_website"></span></a></div>
                             </div>
+                            {% endverbatim %}
                             <div class="row left-align">
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Description:</b></div>
                                 <div class="col s12 m9 grid-s12-m9-l9"><span
@@ -1045,13 +1047,13 @@
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Second Name:</b></div>
                                 <div class="col s12 m9 grid-s12-m9-l9"><span ng-bind="user_lastname"></span></div>
                             </div>
-                            {{verbatim}}
+                            {% verbatim %}
                             <div class="row left-align">
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Website:</b></div>
                                 <div class="col s12 m9 grid-s12-m9-l9"><a href="{{user_website}}"
                                         target="_blank"><span ng-bind="user_website"></span></a></div>
                             </div>
-                            {{endverbatim}}
+                            {% endverbatim %}
                             <div class="row left-align">
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Affiliation:</b></div>
                                 <div class="col s12 m9 grid-s12-m9-l9"><span ng-bind="user_affiliation"></span>
