--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -1052,7 +1052,7 @@
                             {% verbatim %}
                             <div class="row left-align">
                                 <div class="col s12 m3 grid-s12-m3-l3"><b>Website:</b></div>
-                                <div class="col s12 m9 grid-s12-m9-l9"><a href="{{user_website}}"
+                                <div class="col s12 m9 grid-s12-m9-l9"><a ng-href="{{user_website}}"
                                         target="_blank"><span ng-bind="user_website"></span></a></div>
                             </div>
                             {% endverbatim %}
