--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -897,7 +897,7 @@
                                             ng-model="references_doi">
                                         <label for="referencesGeneralDOI">DOI</label>
                                       </div>
-                                      <a class="waves-effect waves-light btn-small">Process DOI</a>
+                                      <a class="waves-effect waves-light btn-small" ng-click="references_process_doi_pressed()">Process DOI</a>
                                 <!-- </div> -->
                                 <div class="input-field">
                                     <textarea id="referencesGeneralNotes" class="validate materialize-textarea"
