new switch added

--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -291,7 +291,7 @@
             <li id="references">
                 <div class="collapsible-header customCollapsibleHeader">
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
-                    <i class="material-icons left">format_quote</i>
+                    <i class="material-icons left">link</i>
                     <span class="left" style="margin-right: 10px;">References</span>
                     <span class="new badge" data-badge-caption="found" style="margin-left: 5px;"
                         ng-bind="main_search_references_number" ng-show="main_search_references_number >= 0"></span>
