--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -354,7 +354,6 @@ nav {
     margin-top: 2px;
 }
 
-
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------ Pushpin with Scrollspy ------------------------------------------------------------------------------ */
@@ -415,4 +414,102 @@ nav {
 
 .rightPanelTitleHeader {
     margin: 0px !important;
+}
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------------------ Switch ---------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+/*
+ * Copyright (c) 2012-2013 Thibaut Courouble
+ * http://www.cssflow.com
+ *
+ * Licensed under the MIT License:
+ * http://www.opensource.org/licenses/mit-license.php
+ */
+
+.switch-custom {
+    position: relative;
+    margin: 0px;
+    height: 26px;
+    width: 84px;
+    background: rgba(0, 0, 0, 0.25);
+    border-radius: 2px;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.switch-label {
+    position: relative;
+    z-index: 2;
+    float: left;
+    width: 40px;
+    line-height: 26px;
+    font-size: 11px;
+    color: rgba(255, 255, 255, 0.35);
+    text-align: center;
+    cursor: pointer;
+}
+
+.switch-label:active {
+    color: #ffffff;
+    /* font-weight: bold; */
+}
+
+.switch-label-off {
+    padding-left: 2px;
+    color: #ffffff;
+}
+
+.switch-label-on {
+    padding-right: 2px;
+    color: #ffffff;
+}
+
+/*
+   * Note: using adjacent or general sibling selectors combined with
+   *       pseudo classes doesn't work in Safari 5.0 and Chrome 12.
+   *       See this article for more info and a potential fix:
+   *       http://css-tricks.com/webkit-sibling-bug/
+   */
+
+.switch-input {
+    display: none;
+}
+
+.switch-input:checked+.switch-label {
+    color: #ffffff;
+    font-weight: bold;
+    -webkit-transition: 0.15s ease-out;
+    -moz-transition: 0.15s ease-out;
+    -o-transition: 0.15s ease-out;
+    transition: 0.15s ease-out;
+}
+
+.switch-input:checked+.switch-label-on~.switch-selection {
+    left: 42px;
+    /* Note: left: 50% doesn't transition in WebKit */
+}
+
+.switch-selection {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 2px;
+    left: 2px;
+    width: 40px;
+    height: 22px;
+    background: #26a69a;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 2px;
+    -webkit-transition: left 0.15s ease-out;
+    -moz-transition: left 0.15s ease-out;
+    -o-transition: left 0.15s ease-out;
+    transition: left 0.15s ease-out;
+}
+
+.switch-custom > .switch-input:disabled ~ .switch-selection {
+    background: #949494;
 }
